webui/css/bridge.css
/* ... */
.headerline {
    color: #666666;
    width: 100%;
    position: relative;
    z-index: 100;
    height: 40px;
    background: rgba(242, 242, 242, 0.96);
    font-size: 17px;
    /*border-top: 5px solid #0078B9;*/
    border-bottom: 1px solid rgb(231, 231, 231);
}
.headertext {
    position: absolute;
    top:5px;
    left:10px;
    font-size:22px;
}
#menu {
    font-family:'Open Sans', sans-serif;
    color: #666666;
    width: 100%;
    text-align: center;
}
.mainNav {
    margin: 0px auto;
    padding-left: 36px;
    height: 40px;
    min-width: 400px;
    background-color: rgb(255, 255, 255);
    background: url('../img/menuLine.png') repeat-x left bottom rgba(255, 255, 255, 1);
}
.mainNav > li {
    height: 40px;
    display: -moz-inline-box;
    /* THE KEY LINES */
    display: inline-block;
    /* THE KEY LINES */
    font-size: 15px;
    font-family:'Open Sans';
    font-weight: 300;
    letter-spacing: 0.05em;
    padding: 5px;
    margin: 0px;
    cursor: pointer;
}
.mainNav > li.selected {
    font-weight: bold;
    font-size: 17px;
    background: url('../img/menuArrow2.png') no-repeat center bottom;
}
.subNav {
    margin: 0px auto;
    padding-left: 36px;
    height: 35px;
    min-width: 400px;
    background-color: rgb(255, 255, 255);
    background: url('../img/menuLine.png') repeat-x left bottom rgba(255, 255, 255, 0.9);
}
.subNav > li {
    height: 35px;
    display: -moz-inline-box;
    /* THE KEY LINES */
    display: inline-block;
    /* THE KEY LINES */
    font-size: 10px;
    font-family:'Open Sans';
    font-weight: 300;
    letter-spacing: 0.05em;
    padding: 7px;
    margin: 0px;
    cursor: pointer;
}
.subNav > li.selected {
    font-weight: bold;
    font-size: 10px;
    background: url('../img/menuArrow2.png') no-repeat center bottom;
}
.sapIcon {
    font-family:'SAP-icons';
    padding-right: 13px;
    padding-left: 13px;
    vertical-align: middle;
}

.animation-container{
    height: 100%;
}
#main{
    display: table;
    height: 100%;
    margin: auto;
}
.centeredContent {
    display: table-cell;
    vertical-align: middle;
    margin-bottom: 40px;
    margin-left: auto;
    margin-right: auto;
    padding: 70px 40px;
    text-align: center;
}
#scrollContainer .centeredContent{
    display: block;
    padding: 5px 15px;
}

#loadingAnimation {
    background-color: rgba(0, 120, 185, 1);
    position: absolute;
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    z-index: 1000;
}
.absoluteCenter {
    margin: auto;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    width: 200px;
    height:200px;
}
.box-heading-content {
    position: relative;
    width: 100%;
    height: 100%;
}
.box-title {
    display: inline;
    font-size: 14px;
    line-height: 32px;
    text-transform: uppercase;
    font-style: italic;
    font-weight: bold;
}

.copy_head{
    font-weight: bold;
}
.copy{
    font-size: 1em;
}
.link, a{
   color:#428bca; 
   text-decoration: none!important; 
}
.form_head{
    font-size: 1em;
    line-height: 20px;
}

.icon {
    font-family:'bridge_icons';
}

.box-icon {
    font-family:'bridge_icons';
    font-size: 20px;
    margin-right: 5px;
    float: left;
}
.table-icon-small {
    font-family:'bridge_icons';
    font-size: 14px;
    margin-right: 2px;
    float: right;
    padding-right: 8px;
    padding-top: 4px;
    color:#0099CC;
}
.table-cell{
    border:2px solid white;
    height:40px;
    padding-top:8px;
    padding-left: 10px;
}

.download-icon {
    font-family:'SAP-icons';
    font-size: 20px;
    color: #428BCA;    
    padding-left: 10px;    
}

.download-icon:hover{
    text-decoration: none;
}

.settingsIcon {
    font-family:'SAP-icons';
    font-size: 20px;
    margin-right: 0px;
    float: right;
}
.settingsIcon:hover {
    cursor: pointer;
}

@media screen and (min-width: 768px) {
    .settings-dialog .modal-dialog {
        width: auto;
        position: absolute;
        left: 100px;
        right: 100px;
    }
    .settings-dialog .modal-content {
        -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
    }
}
.settings-dialog .modal-content {
    padding: 40px;
    position: relative;
    border: 0px;
    border-radius: 0px;
    -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
    box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
    background-clip: padding-box;
    outline: none;
}


.download-dialog {
    width: 415px;
    height: 310px;
    margin-left: auto;
    margin-right: auto;
    margin-top: auto;
    margin-bottom: auto;  
    overflow: hidden;  
}

.download-dialog .modal-dialog {
    width: 415px;
    height: 310px;
    margin: 0px;
}

.download-dialog .modal-content {
    width: 415px;
    height: 310px;
    padding: 20px;
    position: relative;
    border: 0px;
    border-radius: 0px;
    -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
    box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
    background-clip: padding-box;
    outline: none;
}

input[type="checkbox"] {
    -webkit-appearance: none;
    background-color: #ffffff;
    border: 1px solid #cacece;
    padding: 8px;
    display: inline-block;
    position: relative;
    margin-top: 8px;
    margin-bottom: 8px;
}
input[type="checkbox"]:checked {
    background-color: #ffffff;
    border: 1px solid #adb8c0;
    color: #99a1a7;
}
input[type="checkbox"]:checked:after {
    content:'\2714';
    font-size: 12px;
    position: absolute;
    top: 0px;
    left: 3px;
    color: #99a1a7;
}

.sortable-list {
    list-style-type: none;
    max-width: 1500px;
    display:inline-block;
    padding-left: 0px;
}
.sortable-item {
    margin:2.5px 5px 5px 5px;
    display:inline-block;
    /*float: left; */
}
.sortable-placeholder {
    margin-top: 5px;
    margin-left: 5px;
    margin-right: 5px;
    margin-bottom: 5px;
    display:inline-block;
    background: rgba(255,255,255,0.2);
    box-shadow: 2px 2px 0px rgba(0,0,0,0.1);    
}
/* ... */

